# shift

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  README.md  install.sh  release-please-config.json  skills-lock.json
.agents/skills/: shift-ai  shift-ai-preflight
.agents/skills/shift-ai-preflight/: SKILL.md
.github/workflows/: ci.yml  release.yml  test-linux.yml
.trae/skills/: shift-ai-preflight
claude-code-hook/: README.md  install.sh  settings.json
codex-plugin/: README.md  install.sh
docs/: CNAME  index.html
docs/guide/: index.html
launchagent/: com.shift-ai.proxy.plist
opencode-plugin/: README.md  index.test.ts  index.ts  package.json  tsconfig.json
profiles/: anthropic.json  google.json  openai.json
runtime/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
runtime/src/: cli.ts  index.ts
runtime/src/core/: binary.ts  data-convert.ts  index.ts  metrics.ts  optimizer.ts  provider-detect.ts  stats.ts  types.ts
runtime/src/middleware/: index.ts  transform.ts  types.ts
runtime/src/proxy/: index.ts  server.ts  types.ts
runtime/src/proxy/routes/: anthropic.ts  google.ts  openai.ts  passthrough.ts
runtime/test/core/: binary.test.ts  data-convert.test.ts  metrics.test.ts  optimizer.test.ts  provider-detect.test.ts  stats.test.ts
runtime/test/integration/: validate-real-image.ts  validate.ts
runtime/test/middleware/: transform.test.ts
runtime/test/proxy/: server.test.ts
shift-cli/: Cargo.toml
shift-cli/src/: env.rs  main.rs  proxy.rs  setup.rs
shift-core/: Cargo.toml
shift-core/src/: cost.rs  lib.rs  mode.rs  pipeline.rs  report.rs  stats.rs
shift-core/src/inspector/: audio.rs  document.rs  image.rs  mod.rs  video.rs
shift-core/src/payload/: anthropic.rs  mod.rs  openai.rs
shift-core/src/policy/: mod.rs  provider.rs  rules.rs
shift-core/src/transformer/: audio.rs  document.rs  image.rs  mod.rs  video.rs
shift-core/tests/: pipeline_integration.rs
shift-proxy/: Cargo.toml
shift-proxy/src/: body.rs  forward.rs  lib.rs  optimize.rs  state.rs
shift-proxy/src/routes/: anthropic.rs  google.rs  health.rs  mod.rs  openai.rs  passthrough.rs
shift-proxy/tests/: proxy_routes.rs
skills/: shift-ai-preflight
skills/shift-ai/: SKILL.md
tests/: test-distro.sh
tests/docker/: Dockerfile.arch  Dockerfile.ubuntu
tests/fixtures/: anthropic_request.json  openai_request.json
tests/integration/: pipeline_test.rs
