[workspace]
members = ["shift-core", "shift-cli", "shift-proxy"]
resolver = "2"

[workspace.package]
version = "0.9.6"
edition = "2021"
license = "Apache-2.0"

# Optimize image-processing dependencies in test/dev builds.
# Without this, tests that encode/decode images at 4000x3000
# take ~30s total in unoptimized debug mode. With opt-level=2
# on these deps, the same tests finish in ~2s.
[profile.test.package."*"]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2
