[package]
name = "shift-preflight-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for SHIFT — transform images in AI model payloads to meet provider constraints"
repository = "https://github.com/alohaninja/shift"
homepage = "https://shift-ai.dev/"
keywords = ["ai", "openai", "anthropic", "cli", "token"]
categories = ["command-line-utilities"]
readme = "../README.md"
exclude = ["tests/"]

[[bin]]
name = "shift-ai"
path = "src/main.rs"

[dependencies]
shift-preflight = { path = "../shift-core", version = "0.8.0" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
colored = "2"
ureq = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
