[package]
name = "shift-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Multimodal preflight layer for AI model inputs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp", "tiff"] }
resvg = "0.44"
base64 = "0.22"
anyhow = "1"
minreq = { version = "2", features = ["https"] }
url = "2"

[dev-dependencies]
tempfile = "3"
